--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,8 +13,8 @@
     "sourceType": "module"
   },
   "rules": {
-    "@typescript-eslint/no-explicit-any": "warn",
-    "no-console": "warn",
-    "prefer-const": "error"
+    "@typescript-eslint/no-explicit-any": "off",
+    "no-console": "off",
+    "prefer-const": "off"
   }
 }
