--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.3.1",
     "@mui/material": "^6.3.1",
+    "@supabase/supabase-js": "^2.47.12",
     "firebase": "^11.1.0",
     "framer-motion": "^11.17.0",
     "next": "15.1.4",
@@ -25,6 +26,7 @@
   "devDependencies": {
     "@types/node": "22.10.5",
     "@types/react": "19.0.4",
+    "eslint": "^9.18.0",
     "typescript": "5.7.3"
   }
 }
