--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,9 +33,12 @@
   "include": [
     "**/*.ts",
     "**/*.tsx",
+    "**/*.js",
+    "**/*.jsx",
     "next-env.d.ts",
-    ".next/types/**/*.ts"
-, "src/app/admin/page.js"  ],
+    ".next/types/**/*.ts",
+    "src/app/admin/page.js"
+  ],
   "exclude": [
     "node_modules"
   ]
