--- a/package.json
+++ b/package.json
@@ -21,12 +21,17 @@
     "react-device-detect": "^2.2.3",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
+    "react-spinners": "^0.15.0",
+    "react-use": "^17.6.0",
     "sweetalert2": "^11.15.10"
   },
   "devDependencies": {
     "@types/node": "22.10.5",
     "@types/react": "19.0.4",
+    "@typescript-eslint/eslint-plugin": "^8.20.0",
+    "@typescript-eslint/parser": "^8.20.0",
     "eslint": "^9.18.0",
+    "eslint-plugin-react": "^7.37.4",
     "typescript": "5.7.3"
   }
 }
