--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,13 +33,12 @@
   "include": [
     "**/*.ts",
     "**/*.tsx",
-    "**/*.js",
-    "**/*.jsx",
     "next-env.d.ts",
-    ".next/types/**/*.ts",
-    "src/app/admin/page.js"
+    ".next/types/**/*.ts"
   ],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "**/*.js",
+    "**/*.jsx"
   ]
 }
