--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
     "firebase": "^11.1.0",
     "framer-motion": "^11.17.0",
     "next": "15.1.4",
+    "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-spinners": "^0.15.0",
     "react-use": "^17.6.0",
-    "sweetalert2": "^11.15.10"
+    "sweetalert2": "^11.17.2"
   },
   "devDependencies": {
     "@types/node": "22.10.5",
