--- a/package.json
+++ b/package.json
@@ -10,11 +10,17 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@mercadopago/sdk-react": "^1.0.0",
     "@mui/icons-material": "^6.3.1",
     "@mui/material": "^6.3.1",
     "@supabase/supabase-js": "^2.47.12",
+    "date-fns": "^4.1.0",
     "firebase": "^11.1.0",
     "framer-motion": "^11.17.0",
+    "html2canvas": "^1.4.1",
+    "html5-qrcode": "^2.3.8",
+    "jspdf": "^3.0.0",
+    "mercadopago": "^2.3.0",
     "next": "15.1.4",
     "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
