--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-icons": "^5.4.0",
     "react-spinners": "^0.15.0",
     "react-use": "^17.6.0",
-    "sweetalert2": "^11.17.2"
+    "sweetalert2": "^11.17.2",
+    "swiper": "^11.2.5"
   },
   "devDependencies": {
     "@types/node": "22.10.5",
